Fix: input width, closing burger window

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
                     </div>
                 </div>
                 <div class="burger-menu_navigation">
-                    <ul class="burger-menu_list">
+                    <ul id="burger-menu_list" class="burger-menu_list">
                         <li><a href="#">HOME</a></li>
-                        <li><a href="#">SERVICES</a></li>
-                        <li><a href="#">PORTFOLIO</a></li>
-                        <li><a href="#">ABOUT</a></li>
-                        <li><a href="#">CONTACT</a></li>
+                        <li><a href="#service_box">SERVICES</a></li>
+                        <li><a href="#portfollio_container">PORTFOLIO</a></li>
+                        <li><a href="#about_us-container">ABOUT</a></li>
+                        <li><a href="#quote-section">CONTACT</a></li>
                     </ul>
                 </div>
             </div>
